components/default/blinko/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: blinko
  labels:
    app.kubernetes.io/instance: blinko
    app.kubernetes.io/name: blinko
  annotations:
    gethomepage.dev/href: "https://notes.${CLUSTER_DOMAIN}"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Ingress
    gethomepage.dev/icon: https://cdn.jsdelivr.net/gh/selfhst/icons/png/blinko.png
spec:
  parentRefs:
    - name: ${GATEWAY_NAME}
      namespace: ${GATEWAY_NAMESPACE}
      sectionName: https
  hostnames: ["notes.${CLUSTER_DOMAIN}"]
  rules:
    - backendRefs:
        - name: blinko
          port: 1111
